--- a/web/src/css/styles/_mixins.scss
+++ b/web/src/css/styles/_mixins.scss
@@ -44,3 +44,15 @@
         + "Available breakpoints are: #{map-keys($breakpoints)}.";
   }
 }
+
+@mixin clearfix() {
+  zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+
+  &:before,
+  &:after {
+      content: '';
+      display: table;
+  }
+
+  &:after { clear: both; }
+}
