update core frontend files

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -44,7 +44,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: calc-rem(20px);
-  font-size: calc-rem(16);
+  font-size: calc-rem(16px);
   font-family: $bodyFont;
   width: 100%;
   font-weight: 400;
