--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -201,3 +201,4 @@ select {
 
 // @import './css/components/SiteHeader.scss';
 @import './css/components/Accordion.scss';
+@import './css/components/BlockTabs.scss';
