--- a/templates/_pages/entry.twig
+++ b/templates/_pages/entry.twig
@@ -1,11 +1,13 @@
 {% extends "_layouts/page-layout--default" %}
 
 {% block content %}
-    
-    {% if entry.type == 'homepage' %}
-        {% include "_builders/page--home" %}
-    {% else %}
-        {% include "_builders/page--entry" %}
-    {% endif %}
+	
+	{% if entry.type == 'homepage' %}
+		{% include "_builders/page--home" %}
+	{% elseif entry.type == 'news' %}
+		{% include "_builders/page--news" %}
+	{% else %}
+		{% include "_builders/page--entry" %}
+	{% endif %}
 
 {% endblock %}
