added hero banner block

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -211,4 +211,5 @@ section {
 @import './css/components/SiteHeader.scss';
 @import './css/components/SiteFooter.scss';
 @import './css/components/Slider.scss';
+@import './css/components/BlockHeroBanner.scss';
 
