added testimonial carousel

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -212,4 +212,5 @@ section {
 @import './css/components/SiteFooter.scss';
 @import './css/components/Slider.scss';
 @import './css/components/BlockHeroBanner.scss';
+@import './css/components/BlockTestimonials.scss';
 
