Text image block initial commit

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -213,4 +213,6 @@ section {
 @import './css/components/Slider.scss';
 @import './css/components/BlockHeroBanner.scss';
 @import './css/components/BlockTestimonials.scss';
+@import './css/components/BlockTextImage.scss';
+
 
