--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -214,5 +214,8 @@ section {
 @import './css/components/BlockHeroBanner.scss';
 @import './css/components/BlockTestimonials.scss';
 @import './css/components/BlockTextImage.scss';
+@import './css/components/BlockLogoMarquee.scss';
+
+
 
 
