--- a/web/src/css/styles/_variables.scss
+++ b/web/src/css/styles/_variables.scss
@@ -5,6 +5,7 @@
  */
 $black: 0 0% 0%;          // #000000
 $white: 0 0% 100%;        // #FFFFFF
+$peach: 10 74% 68%;             // #EA8571
 
 $headingFont: 'Playfair Display', serif;
 $bodyFont: 'Open Sans', Arial, sans-serif;
