added Contact Form with wheel form plugin

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -222,6 +222,7 @@ section {
 @import './css/components/BlockTextImage.scss';
 @import './css/components/BlockLogoMarquee.scss';
 @import './css/components/BlockFeatureCards.scss';
+@import './css/components/BlockContactForm.scss';
 
 
 
