--- a/templates/_blocks/block--contactForm.twig
+++ b/templates/_blocks/block--contactForm.twig
@@ -35,4 +35,4 @@
         {{ form.close() }}
     </div>
   </div>
-</section>composer require hybridinteractive/craft-contact-form-extensions -w && php craft plugin/install contact-form-extensions
+</section>
