updated form success redirect

--- a/templates/_blocks/block--contactForm.twig
+++ b/templates/_blocks/block--contactForm.twig
@@ -20,7 +20,7 @@
 
         {% set form = wheelform.form({
             id: 1,
-            redirect: 'contact/thanks'
+            redirect: '/'
         }) %}
 
         {{ form.open() }}
